# clinical-data-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  make.bat  pyproject.toml
app/: api.py  main.py
app/models/: metadata.py
app/services/: loader.py
app/utils/: reader.py
tests/: conftest.py  test_api.py
tests/testdata/: sample.csv
