[project]
name = "clinical-data-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Mike Shmygel",email = "m.shmygel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyreadstat (>=1.2.9,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
