[tool.poetry]
name = "clinical-data-api"
version = "0.1.0"
description = ""
authors = ["Mike Shmygel <m.shmygel@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pandas = "^2.2.3"
pyreadstat = "^1.2.9"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
